--- a/popup.html
+++ b/popup.html
@@ -112,7 +112,7 @@
       <p>Developed by Malathi N</p>
       <a 
         class="github-link"
-        href="https://github.com/MALATHI-N79/MindSpark.git" 
+        href="https://github.com/malathi-n79/MindSpark" 
         target="_blank">
         Fork on GitHub
       </a>
